# semantic-search

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
.github/workflows/: tests.yml
api/: __main__.py  settings.py
api/infra/db/: dependencies.py
api/infra/db/model/: __init__.py  base.py  file.py
api/infra/db/repository/: base.py  file.py
api/tests/: conftest.py
api/tests/api/: test_monitoring.py
api/tests/service/: test_file.py  test_file_chunk.py
api/web/: application.py  lifetime.py
api/web/api/: __init__.py  file.py  monitoring.py
api/web/schema/: file.py  search_file_result.py
api/web/service/: file.py  file_chunk.py  file_parser.py
app/: package-lock.json  page.tsx
deploy/: backend.prod.Dockerfile
