[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for semantic search service for files"
authors = ["Wenzhuo Zhao <zslyvain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
SQLAlchemy = "^2.0.23"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.1.0"
yarl = "^1.9.3"
uvicorn = "^0.24.0.post1"
pgvector = "^0.2.4"
pypdf2 = "^3.0.1"
pytesseract = "^0.3.10"
pymupdf = "^1.23.7"
openai = "^1.3.8"
tiktoken = "^0.5.2"
loguru = "^0.7.2"
python-multipart = "^0.0.6"
ujson = "^5.9.0"
asgi-correlation-id = "^4.2.0"
fastapi-pagination = "^0.12.14"
pre-commit = "^3.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"
pytest-cov = "^4.1.0"
ruff = "^0.1.9"

[tool.ruff]
include = ["pyproject.toml", "api/**/*.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
